--- a/CapyLingo/tsconfig.json
+++ b/CapyLingo/tsconfig.json
@@ -3,8 +3,16 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": ["./*"]
+      "@/*": [
+        "./*"
+      ]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "app/Login.jsx", "app/_layout.jsx", "../index.tsx"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "app/Login.jsx",
+    "app/_layout.jsx",
+    "../index.tsx"
+  ]
 }
