Refactor splash screen implementation and layout structure; add home screen component and update TypeScript configuration

--- a/CapyLingo/tsconfig.json
+++ b/CapyLingo/tsconfig.json
@@ -13,6 +13,8 @@
     "**/*.tsx",
     "app/Login.jsx",
     "app/_layout.jsx",
-    "../index.tsx"
+    "../index.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
   ]
 }
