--- a/CapyLingo/tsconfig.json
+++ b/CapyLingo/tsconfig.json
@@ -11,7 +11,7 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "app/Login.jsx",
+    "app/login/index.jsx",
     "app/_layout.jsx",
     "../index.tsx",
     ".expo/types/**/*.ts",
