Migrate login component from TypeScript to JavaScript: rename index.tsx to index.jsx and update tsconfig

--- a/CapyLingo/tsconfig.json
+++ b/CapyLingo/tsconfig.json
@@ -11,7 +11,7 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "app/login/index.tsx",
+    "app/login/index.jsx",
     "app/_layout.jsx",
     "../index.tsx",
     ".expo/types/**/*.ts",
