--- a/CapyLingo/package.json
+++ b/CapyLingo/package.json
@@ -26,6 +26,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
     "expo-status-bar": "~2.0.0",
@@ -37,13 +38,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-router-dom": "^7.0.2",
-    "expo-linear-gradient": "~14.0.2"
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
